<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/but_enviar"
        android:layout_width="145dp"
        android:layout_height="62dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="556dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="113dp"
        android:background="@drawable/buttonstyle"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="sendMessage"
        android:text="@string/but_enviar"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/intxt_1"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginTop="292dp"
        android:layout_marginBottom="56dp"
        android:ems="10"
        android:hint="@string/intxt_1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/intxt_2"
        android:layout_width="54dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/intxt_2"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_4" />

    <TextView
        android:id="@+id/txt_4"
        android:layout_width="284dp"
        android:layout_height="34dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/txt_4"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/intxt_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sl2"
        android:layout_width="17dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="64dp"
        android:text="/"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/but_enviar"
        app:layout_constraintEnd_toStartOf="@+id/intxt_4"
        app:layout_constraintStart_toEndOf="@+id/intxt_3"
        app:layout_constraintTop_toBottomOf="@+id/txt_4"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/intxt_3"
        android:layout_width="54dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/intxt_3"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_4" />

    <TextView
        android:id="@+id/txt_3"
        android:layout_width="285dp"
        android:layout_height="33dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/txt_3"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/intxt_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/intxt_4"
        android:layout_width="64dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/intxt_4"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_4" />

    <TextView
        android:id="@+id/sl1"
        android:layout_width="19dp"
        android:layout_height="47dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="2dp"
        android:text="/"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/intxt_3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/intxt_2"
        app:layout_constraintTop_toBottomOf="@+id/txt_4" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="292dp"
        android:layout_height="156dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/estudio" />

    <TextView
        android:id="@+id/lbles"
        android:layout_width="291dp"
        android:layout_height="62dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="2dp"
        android:text="@string/lbles"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>