<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".NumActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="363dp"
        android:layout_height="74dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/b_sign"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_urgencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="382dp"
        android:layout_height="603dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="27dp"
        android:scrollbarSize="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/num2" />

            <TextView
                android:id="@+id/txtnum"
                android:layout_width="match_parent"
                android:layout_height="479dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/txt_num1"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtnum2"
                android:layout_width="match_parent"
                android:layout_height="528dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/txt_num2"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtnum3"
                android:layout_width="match_parent"
                android:layout_height="704dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/txt_num3"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>