<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".DisplayMessageActivity">

    <TextView
        android:id="@+id/txt_1"
        android:layout_width="341dp"
        android:layout_height="49dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="29dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_2" />

    <TextView
        android:id="@+id/txt_6"
        android:layout_width="293dp"
        android:layout_height="39dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="56dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_2"
        android:layout_width="96dp"
        android:layout_height="19dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="279dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/txt2"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txt_5"
        android:layout_width="237dp"
        android:layout_height="22dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/txt_4"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_1"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/b_urg"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="28dp"
        android:allowUndo="false"
        android:background="@drawable/buttonstyle"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="AcUrgencia"
        android:text="@string/b_urg"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/b_ton"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_6" />

    <Button
        android:id="@+id/b_ton"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="43dp"
        android:background="@drawable/buttonstyle"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="AcTonico"
        android:text="@string/b_ton"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_6" />

    <Button
        android:id="@+id/b_dia"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/buttonstyle"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="AcDia"
        android:text="@string/b_dia"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_urg" />

    <Button
        android:id="@+id/b_acnt"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="51dp"
        android:background="@drawable/buttonstyle"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="AcAcon"
        android:text="@string/b_acnt"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_ton" />

    <Button
        android:id="@+id/b_sign"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="113dp"
        android:background="@drawable/buttonstyle"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="AcNum"
        android:text="@string/b_sign"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_dia"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/about"
        android:layout_width="44dp"
        android:layout_height="59dp"
        android:layout_marginStart="310dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_background"
        android:clickable="true"
        android:focusable="true"
        android:onClick="AcAbout"
        android:text="?"
        android:textColor="@android:color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_cab" />

    <Button
        android:id="@+id/b_cab"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="51dp"
        android:background="@drawable/buttonstyle"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="AcCab"
        android:text="@string/b_cab"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_acnt" />

    <TextView
        android:id="@+id/txtLbl"
        android:layout_width="229dp"
        android:layout_height="38dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="138dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/txtLbl"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_6" />

</androidx.constraintlayout.widget.ConstraintLayout>